# BCGNet

./: call_BCGnet.ipynb  pyproject.toml  requirements.txt
dataset/: default_dataset.py
