[tool.poetry]
name = "bcgnet"
version = "0.1.0"
description = ""
authors = ["JacobLinCool <jacoblincool@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "~3.10"
# tensorflow = "~2.12.0"
tensorflow-macos = "~2.12.0"
# tensorflow-metal = "^0.8.0"
# tensorflow-gpu = "~2.12.0"
mne = "~1.3.1"
scipy = "~1.10.1"
easydict = "~1.10"
ipykernel = "~6.22.0"
tqdm = "~4.65.0"
pyyaml = "^6.0"
tabulate = "^0.9.0"
mat73 = "^0.60"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
